Remove `levels.fyi` from graph titles.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       };
       const option = {
         title: {
-          text: `Top Pay by Level - ${level} - Levels.fyi`,
+          text: `Top Pay by Level - ${level}`,
           left: 'center'
         },
         tooltip: {
