Adding data for 2025; setting the minimum width to 80%

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
   </script>
 </head>
 <body>
-<div id="main" class="flex flexColumn" style="max-width: 90%">
+<div id="main" class="flex flexColumn" style="min-width: 80%;max-width: 90%">
   <div id="title">
     <h1 style="margin-bottom: 15px;">Levels.fyi - Top Pay by Level</h1>
   </div>
